Cell faces and Node neighbors are now added, updated tests