@@ -43,13 +43,15 @@ class Structured1DMeshTest {
 
     @BeforeAll
     static void setUp() throws FileNotFoundException {
-        Node[] nodes = new Node[5];
-        nodes[0] = new Node(-2.0, 0, 0);
-        nodes[1] = new Node(-0.75, 0.25, 0);
-        nodes[2] = new Node(0.5, 0.5, 0);
-        nodes[3] = new Node(1.75, 0.75, 0);
-        nodes[4] = new Node(3.0, 1.0, 0);
-        expectedNodes = Arrays.asList(nodes);
+        Node[] nodes = new Node[7];
+        nodes[0] = new Node(-3.25, -0.25, 0.0); // Ghost node
+        nodes[1] = new Node(-2.0, 0, 0);
+        nodes[2] = new Node(-0.75, 0.25, 0);
+        nodes[3] = new Node(0.5, 0.5, 0);
+        nodes[4] = new Node(1.75, 0.75, 0);
+        nodes[5] = new Node(3.0, 1.0, 0);
+        nodes[6] = new Node(4.25, 1.25, 0.0); // Ghost node
+        expectedNodes = Arrays.asList(nodes).subList(1, nodes.length - 1);
 
         Cell[] cells = new Cell[nodes.length - 1];
         for (int i = 0; i < cells.length; i++) {
@@ -57,11 +59,12 @@ class Structured1DMeshTest {
             Geometry cellGeom = new Line(new Point(cellNodes[0].x, cellNodes[0].y, cellNodes[0].z),
                     new Point(cellNodes[1].x, cellNodes[1].y, cellNodes[1].z));
             Shape shape = new Shape(cellGeom.length() * 1.0 * 1.0, cellGeom.centroid());
-            cells[i] = new Cell(i, cellNodes, VTKType.VTK_LINE, shape, numVars);
+            int index = (i == 0 || i == cells.length - 1) ? -1 : i - 1;
+            cells[i] = new Cell(index, cellNodes, VTKType.VTK_LINE, shape, numVars);
         }
-        expectedCells = Arrays.asList(cells);
+        expectedCells = Arrays.asList(cells).subList(1, cells.length - 1);
 
-        Face[] internalFaces = new Face[nodes.length - 2];
+        Face[] faces = new Face[nodes.length - 2];
         for (int i = 1; i < nodes.length - 1; i++) {
             Point leftPoint = new Point(nodes[i - 1].x, nodes[i - 1].y, nodes[i - 1].z);
             Point iPoint = new Point(nodes[i].x, nodes[i].y, nodes[i].z);
@@ -70,24 +73,66 @@ class Structured1DMeshTest {
             Geometry faceGeom = new Vertex(iPoint);
 
             Vector faceNormal = new Vector(leftPoint, iPoint).add(new Vector(iPoint, rightPoint));
+            if (i == 1) {
+                faceNormal = faceNormal.mult(-1);
+            }
             Vector unitNormal = faceNormal.unit();
 
             Surface surface = new Surface(1.0 * 1.0, faceGeom.centroid(), unitNormal);
 
             Cell left = cells[i - 1];
             Cell right = cells[i];
+            if (i == 1) {
+                left = cells[i];
+                right = cells[i - 1];
+            }
 
-            internalFaces[i - 1] = new Face(new Node[]{nodes[i]}, VTKType.VTK_VERTEX, surface, left, right, numVars);
+            faces[i - 1] = new Face(new Node[]{nodes[i]}, VTKType.VTK_VERTEX, surface, left, right, numVars);
         }
-        expectedInternalFaces = Arrays.asList(internalFaces);
+        expectedInternalFaces = Arrays.asList(faces).subList(1, faces.length - 1);
+
+        Boundary xi_minBoundary = new Boundary("xi min", List.of(faces[0]), dummyBC);
+        Boundary xi_maxBoundary = new Boundary("xi max", List.of(faces[faces.length - 1]), dummyBC);
+        expectedBoundaries = List.of(xi_minBoundary, xi_maxBoundary);
+
+        // Setup node neighbours
+        for (int i = 1; i < nodes.length - 1; i++) {
+            if (i == 1) {
+                nodes[i].neighbors.add(cells[i]);
+                nodes[i].neighbors.add(cells[i - 1]);
+            } else {
+                nodes[i].neighbors.add(cells[i - 1]);
+                nodes[i].neighbors.add(cells[i]);
+            }
+        }
+
+        // Setup faces of cells
+        for (int i = 1; i < cells.length - 1; i++) {
+            if (i == 1) {
+                cells[i].faces.add(faces[i]);
+                cells[i].faces.add(faces[i - 1]);
+            } else {
+                cells[i].faces.add(faces[i - 1]);
+                cells[i].faces.add(faces[i]);
+            }
+        }
 
         actualMesh = new Structured1DMesh(new File("test_data/mesh_structured_1d.cfds"), numVars, dummyBC, dummyBC);
     }
 
     private static void assertNodeEquals(Node expected, Node actual) {
-        Point p1 = new Point(expected.x, expected.y, expected.z);
-        Point p2 = new Point(actual.x, actual.y, actual.z);
-        assertEquals(0, p1.distance(p2), 1e-15);
+        // Has same location
+        Point expectedPoint = new Point(expected.x, expected.y, expected.z);
+        Point actualPoint = new Point(actual.x, actual.y, actual.z);
+        assertEquals(0, expectedPoint.distance(actualPoint), 1e-15);
+
+        // Has same neighbors
+        assertEquals(expected.neighbors.size(), actual.neighbors.size());
+        for (int i = 0; i < expected.neighbors.size(); i++) {
+            Cell expectedCell = expected.neighbors.get(i);
+            Cell actualCell = actual.neighbors.get(i);
+            assertShapeEquals(expectedCell.shape, actualCell.shape);
+        }
     }
 
     private static void assertSurfaceEquals(Surface expected, Surface actual) {
@@ -122,9 +167,9 @@ class Structured1DMeshTest {
         // Have same surface
         assertSurfaceEquals(expected.surface, actual.surface);
 
-        // Have same left and right cells ???? Will cause Stack overflow when face neighbors are added!!
-        assertCellEquals(expected.left, actual.left);
-        assertCellEquals(expected.right, actual.right);
+        // Have same left and right cells
+        assertShapeEquals(expected.left.shape, actual.left.shape);
+        assertShapeEquals(expected.right.shape, actual.right.shape);
 
         // Have same number of variables
         assertEquals(numVars, actual.flux.length);
@@ -200,54 +245,6 @@ class Structured1DMeshTest {
 
     @Test
     void boundaries() {
-
-        // xi min boundary
-        Node ni = expectedNodes.get(0);
-        Point pi = new Point(ni.x, ni.y, ni.z);
-
-        Node nip1 = expectedNodes.get(1);
-        Point pip1 = new Point(nip1.x, nip1.y, nip1.z);
-
-        Vector faceNormal = new Vector(pip1, pi);
-        Vector unitNormal = faceNormal.unit();
-
-        Point pim1 = new Point(ni.x + faceNormal.x, ni.y + faceNormal.y, ni.z + faceNormal.z);
-        Node ghostNode = new Node(pim1);
-        Geometry ghostCellGeom = new Line(pim1, pi);
-        Shape shape = new Shape(ghostCellGeom.length() * 1.0 * 1.0, ghostCellGeom.centroid());
-        Cell ghostCell = new Cell(-1, new Node[]{ghostNode, ni}, VTKType.VTK_LINE, shape, numVars);
-
-        Geometry faceGeom = new Vertex(pi);
-
-        Surface surface = new Surface(1.0 * 1.0, faceGeom.centroid(), unitNormal);
-        Face face = new Face(new Node[]{ni}, VTKType.VTK_VERTEX, surface, expectedCells.get(0), ghostCell, numVars);
-        Boundary xi_minBoundary = new Boundary("xi min", List.of(face), dummyBC);
-
-        int xi = expectedNodes.size();
-        // xi max boundary
-        ni = expectedNodes.get(xi - 1);
-        pi = new Point(ni.x, ni.y, ni.z);
-
-        Node nim1 = expectedNodes.get(xi - 2);
-        pim1 = new Point(nim1.x, nim1.y, nim1.z);
-
-        faceNormal = new Vector(pim1, pi);
-        unitNormal = faceNormal.unit();
-
-        pip1 = new Point(ni.x + faceNormal.x, ni.y + faceNormal.y, ni.z + faceNormal.z);
-        ghostNode = new Node(pip1);
-        ghostCellGeom = new Line(pi, pip1);
-        shape = new Shape(ghostCellGeom.length() * 1.0 * 1.0, ghostCellGeom.centroid());
-        ghostCell = new Cell(-1, new Node[]{ni, ghostNode}, VTKType.VTK_LINE, shape, numVars);
-
-        faceGeom = new Vertex(pi);
-
-        surface = new Surface(1.0 * 1.0, faceGeom.centroid(), unitNormal);
-        face = new Face(new Node[]{ni}, VTKType.VTK_VERTEX, surface, expectedCells.get(xi - 2), ghostCell, numVars);
-        Boundary xi_maxBoundary = new Boundary("xi max", List.of(face), dummyBC);
-
-        expectedBoundaries = List.of(xi_minBoundary, xi_maxBoundary);
-
         assertEquals(expectedBoundaries.size(), actualMesh.boundaries().size());
         for (int i = 0; i < expectedBoundaries.size(); i++) {
             assertBoundaryEquals(expectedBoundaries.get(i), actualMesh.boundaries().get(i));
